    - [x86] ACPI: ACPI_TABLE_UPGRADE replaced ACPI_INITRD_TABLE_OVERRIDE
  * cgroups: Enable memory controller by default
  * [armfh] udeb: Add efi-modules
  * linux-kbuild: Include headers_install.sh and unifdef (Closes: #832359)
  * udeb: Include cdc_ncm in nic-usb-modules (Closes: #833918)
  * usbip: Use the locally-installed <linux/usbip.h>

  [ Martin Michlmayr ]
  * [armhf] Enable MMC_SDHCI_IPROC and HW_RANDOM_BCM2835 for BCM2835.
  * [arm64] Add USB support for NVIDIA Jetson TX1 Developer Kit:
    - pinctrl: max77620: add pincontrol driver for MAX77620/MAX20024
    - gpio: max77620: add gpio driver for MAX77620/MAX20024
    - gpio: max77620: Configure interrupt trigger level
    - gpio: max77620: use the new open drain callback
    - gpio: max77620: get gpio value based on direction
    - arm64: tegra: Add PMIC support on Jetson TX1
    - arm64: tegra: p2597: Add SDMMC power supplies
    - arm64: tegra: Add DSI panel on Jetson TX1
    - arm64: tegra: Add Tegra210 XUSB pad controller
    - arm64: tegra: Add Tegra210 XUSB controller
    - arm64: tegra: Enable debug serial on Jetson TX1
    - arm64: tegra: Enable XUSB controller on Jetson TX1
    - arm64: tegra: Correct Tegra210 XUSB mailbox interrupt
  * [arm64] Enable REGULATOR_FIXED_VOLTAGE.
  * [arm64] Enable ARM64_ERRATUM_834220.
  * [arm64] Build in SERIAL_TEGRA.
  * [arm64] Enable REGULATOR_PWM, DRM_PANEL_SIMPLE, BACKLIGHT_GENERIC
    and BACKLIGHT_LP855X for Jetson TX1.
  * [arm64] Enable BATTERY_BQ27XXX, MFD_CROS_EC_I2C, I2C_CROS_EC_TUNNEL
    for Google Pixel C.
  * [arm64] Enable more Qualcomm options: PINCTRL_QCOM_SPMI_PMIC,
    SPMI_MSM_PMIC_ARB, QCOM_SPMI_IADC, QCOM_SPMI_VADC, MFD_SPMI_PMIC,
    REGULATOR_QCOM_SPMI, QCOM_SPMI_TEMP_ALARM, CHARGER_QCOM_SMBB,
    USB_CHIPIDEA, USB_HSIC_USB3503, RTC_DRV_PM8XXX, EXTCON_USB_GPIO,
    QCOM_COINCELL, and INPUT_PM8941_PWRKEY.

  [ Uwe Kleine-König ]
  * Fix perf to be able to find debug info based on build-id. (Closes:
    #833096)
