@@ -46,6 +46,8 @@ Build-Depends:
  libglib2.0-dev <!stage1 !pkg.linux.notools>,
  libudev-dev <!stage1 !pkg.linux.notools>,
  libwrap0-dev <!stage1 !pkg.linux.notools>,
+# used by debian/rules.d/tools/usb/usbip to build usbip
+ rsync <!stage1 !pkg.linux.notools>,
 # used by upstream to build cpupower
  libpci-dev <!stage1 !pkg.linux.notools>,
 # used by debian/rules.real to build linux-perf and linux-support
