@@ -22,6 +22,8 @@ linux (4.7.2-1) UNRELEASED; urgency=medium
   * linux-kbuild: Include headers_install.sh and unifdef (Closes: #832359)
   * udeb: Include cdc_ncm in nic-usb-modules (Closes: #833918)
   * usbip: Use the locally-installed <linux/usbip.h>
+  * Exclude redundant and unreproducible files from binary packages
+    - usbip: Put all autotools-generated files in the build directory
 
   [ Martin Michlmayr ]
   * [armhf] Enable MMC_SDHCI_IPROC and HW_RANDOM_BCM2835 for BCM2835.
